--- a/SuperMarketManagementApp/_Imports.razor
+++ b/SuperMarketManagementApp/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using SuperMarketManagementApp
 @using SuperMarketManagementApp.Shared
+@using SuperMarketManagementApp.Controls
 @using CoreBusiness
+
