--- a/SuperMarketManagementApp/Controls/SellProductComponent.razor
+++ b/SuperMarketManagementApp/Controls/SellProductComponent.razor
@@ -1,7 +1,12 @@
 ﻿@inject UseCases.DataStorePluginInterfaces.IProductRepository productRepository
-<h3>Sell Product</h3>
-
+@inject UseCases.UseCasesInterfaces.ISellProductUseCase sellProductUseCase
+ @if(!string.IsNullOrWhiteSpace(erroMessage))
+     {
+        <div class="alert alert-danger"> @erroMessage</div>
+     }
+ <br />
 @if(productToSell != null) {
+    
     <EditForm Model="@productToSell" OnValidSubmit="SellProduct">
         <DataAnnotationsValidator></DataAnnotationsValidator>
         <ValidationSummary></ValidationSummary>
@@ -21,10 +26,7 @@
     <button type="submit" class="btn btn-primary" > Sell </button>
     </EditForm>
     <Br/>
-     @if(erroMessage != null)
-     {
-        <div class="alert alert-danger"> @erroMessage</div>
-    }
+    
     
 }
 
@@ -37,6 +39,8 @@
     public Product SelectedProduct { get; set; }
     [Parameter]
     public EventCallback<Product> OnProductSold { get; set; }
+    [Parameter]
+    public string CashierName { get; set; }
 
     protected override void OnParametersSet()
     {
@@ -52,17 +56,34 @@
                 Quantity = 0
             };
         }
+        else
+        {
+            productToSell = null;
+        }
 
     }
 
     private void SellProduct()
     {
         var product = productRepository.GetProductById(productToSell.Id);
-        if(product.Quantity >= productToSell.Quantity)
+        if (string.IsNullOrWhiteSpace(CashierName))
         {
-            OnProductSold.InvokeAsync(product);
-            erroMessage = string.Empty;  
+            erroMessage = "Cahier's Name cannot be empty";
+            return;
         }
+
+        if(productToSell.Quantity<=0)
+        {
+            erroMessage = $"The quantity has to be greater than zero";
+        }
+        else if(product.Quantity >= productToSell.Quantity)
+        {
+           
+            OnProductSold.InvokeAsync(product);
+            erroMessage = string.Empty;
+            sellProductUseCase.execute(CashierName, productToSell.Id, productToSell.Quantity.Value);
+        }
+        
         else
         {
             erroMessage = $"{product.Name} has only {product.Quantity} items left. It is not enough";  
