--- a/SuperMarketManagementApp/Pages/CashierConsoleComponent.razor
+++ b/SuperMarketManagementApp/Pages/CashierConsoleComponent.razor
@@ -1,23 +1,54 @@
 ﻿@page "/cashiersconsole"
-<h3>Cashier's Console </h3>
-<br />
 <div class="row">
-    <div class="col-4"> 
-        <SelectProductsForSellingComponent OnProductSelected ="SelectProduct" ></SelectProductsForSellingComponent>
-        <SellProductComponent SelectedProduct="selectedProduct" OnProductSold="SellProduct" ></SellProductComponent>
+    <div class = "col-7"><h3>Cahier's Console</h3></div>
+    <div class = "col-2"> <label for="cahier"> Cahier Name</label></div>
+    <div class="col-3">
+         <div class="form-group">
+             <input type="text" id="cahier" @bind-value="cashierName" class="form-control" />
+        </div>
     </div>
 
+</div>
+<br/>
+
+<div class="row">
+    <div class="col-5"> 
+        <SelectProductsForSellingComponent OnProductSelected ="SelectProduct" ></SelectProductsForSellingComponent>
+       <SellProductComponent 
+           CashierName ="@cashierName"
+           SelectedProduct="selectedProduct" 
+           OnProductSold="SellProduct" ></SellProductComponent>
+    </div>
+     <div class="col"> 
+        <TodayTransactionsComponent @ref= "todayTransactionsComponent"></TodayTransactionsComponent>
+    </div>
 </div>
 
 
 @code {
+    private TodayTransactionsComponent todayTransactionsComponent;
     private Product selectedProduct;
+    private string cashierName;
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+    }
+    protected override void OnAfterRender(bool firstRender)
+    {
+        base.OnAfterRender(firstRender);
+        if(firstRender)
+        {
+             todayTransactionsComponent.LoadTransaction(cashierName);
+        }
+    }
     private void SelectProduct(Product product)
     {
         this.selectedProduct = product;
     }
     private void SellProduct(Product product)
     {
-        
+        todayTransactionsComponent.LoadTransaction(cashierName);
+
     }
 }
