--- a/SuperMarketManagementApp/wwwroot/css/site.css
+++ b/SuperMarketManagementApp/wwwroot/css/site.css
@@ -62,3 +62,18 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+@media print{
+    body * {
+        visibility: hidden;
+    }
+    #print_area, #print_area * {
+        visibility: visible;
+    }
+    #print_area {
+        position: absolute;
+        left:0;
+        top:0;
+    }
+
+}
